tomcat encoded slashes post Also:    - fix syntax highlighting padding and scrollbars    - shorten slug to blog/:title [skip ci]

--- a/_assets/stylesheets/_global.scss
+++ b/_assets/stylesheets/_global.scss
@@ -63,9 +63,14 @@ code {
 pre > code {
     display: block;
     white-space: pre;
-    overflow: auto;
-    overflow-x: scroll;
+    overflow-y: hidden;
+    overflow-x: auto;
     width: 100%;
+
+    > span {
+      display: inline-block;
+      padding-bottom: 3px;
+    }
 }
 
 // lists
